--- a/src/main/resources/templates/home/home-guest.html
+++ b/src/main/resources/templates/home/home-guest.html
@@ -19,6 +19,7 @@
                 </li>
             </ul>
         </div>
+        <a th:href="@{/plan/guest}">Plan</a>
     </div>
 </nav>
 <br /><br />
