--- a/src/main/resources/templates/loginandregister/login-page.html
+++ b/src/main/resources/templates/loginandregister/login-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
->
+      xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Meal Planner</title>
@@ -23,7 +23,9 @@
 <div>
     <div>
         <div>
-
+<!--            <div th:if="${}">-->
+<!--                <div>Musisz sie zalogować aby wygenerować plan</div>-->
+<!--            </div>-->
             <div th:if="${param.error}">
                 <div>Invalid Email or Password</div>
             </div>
