prace nad wyszukiwarka + detale konta/przepisu

--- a/src/main/resources/templates/home/home-user.html
+++ b/src/main/resources/templates/home/home-user.html
@@ -27,6 +27,7 @@
     </div>
     <div>
         <a th:href="@{/plan}">Plan</a>
+        <a th:href="@{'/user/' + ${userId}}">Zobacz szczegóły użytkownika</a>
     </div>
 </div>
 </body>
