PlanGenerator kontroler i widok

--- a/src/main/resources/templates/plangenerator/plan-info.html
+++ b/src/main/resources/templates/plangenerator/plan-info.html
@@ -43,7 +43,7 @@
                     <form
                             method="post"
                             role="form"
-                            th:action="@{/preferences}"
+                            th:action="@{/plan/preferences}"
                             th:object="${preferences}"
                             class="form-horizontal"
                     >
