--- a/src/main/resources/templates/details/user-details.html
+++ b/src/main/resources/templates/details/user-details.html
@@ -4,7 +4,7 @@
     <title>User Details</title>
 </head>
 <body>
-<h1>User Details</h1>
+<h1>Profil użytkownika</h1>
 <p>Email: <span th:text="${email}"></span></p>
 <p>Role: <span th:text="${role}"></span></p>
 <!-- Inne pola użytkownika, jeśli są -->
