Zmainy w wyświetlaniu informacji profilowych

--- a/src/main/resources/templates/details/user-details.html
+++ b/src/main/resources/templates/details/user-details.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Profil użytkownika</h1>
-<p>Email: <span th:text="${email}"></span></p>
+<p>Login: <span th:text="${username}"></span></p>
 <p>Role: <span th:text="${role}"></span></p>
 <!-- Inne pola użytkownika, jeśli są -->
 </body>
