--- a/src/main/resources/templates/loginandregister/login-page.html
+++ b/src/main/resources/templates/loginandregister/login-page.html
@@ -23,14 +23,14 @@
 <div>
     <div>
         <div>
-<!--            <div th:if="${}">-->
-<!--                <div>Musisz sie zalogować aby wygenerować plan</div>-->
-<!--            </div>-->
-            <div th:if="${param.error}">
-                <div>Invalid Email or Password</div>
+            <div th:if="${param.planAth}">
+                <div>Musisz sie zalogować aby wygenerować plan.</div>
             </div>
-            <div th:if="${param.logout}">
-                <div> You have been logged out.</div>
+            <div th:if="${param.error}">
+                <div>Login lub hasło są niepoprawne.</div>
+            </div>
+            <div th:if="${param.successReg}">
+                <div> Zostałeś zarejestrowany. Możesz się teraz zalogować.</div>
             </div>
 
             <div>
@@ -45,24 +45,24 @@
                             class="form-horizontal"
                     >
                         <div>
-                            <label> Email</label>
+                            <label> Login</label>
                             <input
                                     type="text"
                                     id="username"
                                     name="username"
                                     class="form-control"
-                                    placeholder="Enter email address"
+                                    placeholder="Podaj login"
                             />
                         </div>
 
                         <div>
-                            <label> Password</label>
+                            <label> Hasło</label>
                             <input
                                     type="password"
                                     id="password"
                                     name="password"
                                     class="form-control"
-                                    placeholder="Enter password"
+                                    placeholder="Podaj hasło"
                             />
                         </div>
                         <div>
