--- a/css/home-style.css
+++ b/css/home-style.css
@@ -69,7 +69,11 @@ nav .burger-btn {
   display: none;
 }
 
-.test-content {
+.active .menu__item {
+  display: block;
+}
+
+.active .me .test-content {
   width: 100%;
   height: 300px;
   margin-top: 100px;
