--- a/src/main/resources/static/sass/home-style.scss
+++ b/src/main/resources/static/sass/home-style.scss
@@ -1,7 +1,5 @@
 @import './_variables';
 @import './_reset';
-
-
 nav {
     width: 100%;
     height: 73px;
@@ -29,11 +27,11 @@ nav {
     }
 }
 
-.active {
-    &__item{
-        display: flex;
-    }
+.active .menu__item {
+    display: block;
 }
+
+.active .me
 
 .test-content {
     width: 100%;
