--- a/css/home-style.css
+++ b/css/home-style.css
@@ -1,3 +1,9 @@
+.container--md {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 600px;
+}
+
 *,
 *::after,
 *::before {
@@ -45,36 +51,221 @@ table {
   border-spacing: 0;
 }
 
+@keyframes clickMe {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 nav {
+  font-family: "Now", sans-serif;
   width: 100%;
   height: 73px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   position: fixed;
   top: 0;
-  z-index: 2;
+  z-index: 4;
+  background-color: #FFFFFF;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
 }
 nav .burger-btn {
-  align-self: self-end;
+  position: fixed;
+  z-index: 3;
+  right: 14px;
   font-size: 46px;
   background: none;
   color: #FFB342;
-  padding: 14px;
+}
+nav .exit-btn {
+  display: none;
+}
+nav .menu__item {
+  display: none;
+}
+nav .active {
+  position: fixed;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #FFFFFF;
+  color: #767676;
+  height: 100vh;
+  width: 100vw;
+}
+nav .active .menu__item {
+  display: block;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 14px;
+  border: 1px solid #F3F3F3;
+  padding: 28px 0;
+  width: 100vw;
+}
+nav .active .menu__item:nth-child(2) {
+  color: #FFB342;
+}
+nav .active .menu__item:last-child {
+  padding: 16px 30px;
+  width: auto;
+  border: 1px solid #FFB342;
+  border-radius: 5px;
+  margin-top: 40px;
 }
 
-.menu__item {
+nav.active .burger-btn {
+  display: none;
+}
+nav.active .exit-btn {
+  display: block;
+  position: fixed;
+  z-index: 3;
+  right: 14px;
+  font-size: 46px;
+  background: none;
+  color: #767676;
+}
+
+main {
+  width: 100vw;
+  font-family: "Now", sans-serif;
+}
+main .plan-generator {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+main .plan-generator .graphic__image {
+  position: relative;
+  transform: translate(-50%, 0);
+  top: 150px;
+  left: 50%;
+  z-index: 0;
+  width: 200px;
+}
+main .plan-generator__btn {
+  margin: 190px auto 30px;
+  color: #FFFFFF;
+  background-color: #FFB342;
+  padding: 9px 18px;
+  font-size: 14px;
+  width: 150px;
+  border-radius: 11px;
+  animation: clickMe 1.5s ease-in-out infinite;
+}
+main .plan-info {
+  display: flex;
+  flex-direction: column;
+}
+main .plan-info__image {
+  position: relative;
+  top: 5px;
+  width: 80px;
+  margin: 0 auto;
+}
+main .plan-info .plan-info-wrapper {
+  background-color: #F3F3F3;
+  width: 100%;
+  border-radius: 40px 0px;
+  padding: 20px 40px;
+}
+main .plan-info__header {
+  font-size: 18px;
+  color: #FFB342;
+  font-weight: 500;
+  line-height: 25px;
+  margin-bottom: 12px;
+}
+main .plan-info__text {
+  margin-bottom: 20px;
+}
+main .plan-info .content {
+  font-size: 13px;
+  line-height: 18px;
+  color: #767676;
+}
+main .about-us__header {
+  margin: 80px 40px 20px;
+  font-size: 18px;
+  color: #767676;
+  font-weight: 500;
+  -moz-text-align-last: left;
+       text-align-last: left;
+}
+main .about-us__image {
+  width: 100%;
+  border-radius: 15px;
+  margin-bottom: 40px;
+}
+main .about-us__wrapper {
+  padding: 20px 40px;
+  display: flex;
+  flex-direction: column;
+}
+main .about-us__text {
+  margin-bottom: 20px;
+}
+main .about-us__ps {
+  margin-bottom: 80px;
+}
+main .about-us .content {
+  display: block;
+  color: #FFB342;
+  font-size: 13px;
+  line-height: 18px;
+}
+
+.test-content {
   display: none;
 }
 
-.active .menu__item {
-  display: block;
+.footer {
+  height: 117px;
+  width: 100vw;
+  display: flex;
+  justify-content: space-around;
+  align-items: start;
+  align-self: flex-end;
+  gap: 20px;
+  background-color: #FFFFFF;
+  box-shadow: 0px -4px 25.2px 0px rgba(0, 0, 0, 0.25);
+  padding: 22px 16px 0;
 }
-
-.active .me .test-content {
-  width: 100%;
-  height: 300px;
-  margin-top: 100px;
+.footer__section {
+  font-family: "Now", sans-serif;
+  color: #767676;
+}
+.footer__section .email {
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  gap: 7px;
+}
+.footer__section .email__text {
+  font-size: 11px;
+  font-weight: 400;
+}
+.footer__section .social-media__links {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+  margin-top: 5px;
+}
+.footer__section .social-media__link {
+  font-size: 22px;
+  color: #FFB342;
+}
+.footer__header {
+  font-size: 15px;
+  font-weight: 500;
+  margin-bottom: 10px;
 }/*# sourceMappingURL=home-style.css.map */
