--- a/src/main/resources/static/sass/__variables.scss
+++ b/src/main/resources/static/sass/__variables.scss
@@ -11,3 +11,9 @@ $breakpoints: (
     'sm': 767px,
     'md': 992px
 );
+
+.container--md{
+    margin: 0 auto;
+    width: 100%;
+    max-width: 600px; 
+}
