--- a/src/main/resources/static/sass/home-style.scss
+++ b/src/main/resources/static/sass/home-style.scss
@@ -1,43 +1,241 @@
 @import './_variables';
 @import './_reset';
+@import './__animations.scss';
+
 nav {
+    font-family: 'Now', sans-serif;
     width: 100%;
     height: 73px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     position: fixed;
     top: 0;
-    z-index: 2;
+    z-index: 4;
+    background-color: $white;
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
 
     .burger-btn {
-        align-self: self-end;
+        position: fixed;
+        z-index: 3;
+        right: 14px;
         font-size: 46px;
         background: none;
         color: $gold;
-        padding: 14px;
     }
-}
-
-.menu {
-    &__item{
+    .exit-btn {
         display: none;
     }
+
+    .menu {
+        &__item{
+            display: none;
+        }
+    }
+    
+    .active {
+        position: fixed;
+        top: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: $white;
+        color: $dark-gray;
+        height: 100vh;
+        width: 100vw;
+        .menu__item {
+        display: block;
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 14px;
+        border: 1px solid $light-gray;
+        padding: 28px 0;
+        width: 100vw;
+        }
+        .menu__item:nth-child(2){
+            color: $gold;
+        }
+        .menu__item:last-child {
+            padding: 16px 30px;
+            width: auto;
+            border: 1px solid $gold;
+            border-radius: 5px;
+            margin-top: 40px;
+        }
+
+    }
 }
 
-.active .menu__item {
-    display: block;
+nav.active {
+
+    .burger-btn {
+        display: none;
+    }
+
+    .exit-btn {
+        display: block;
+        position: fixed;
+        z-index: 3;
+        right: 14px;
+        font-size: 46px;
+        background: none;
+        color: $dark-gray;
+    }
 }
 
-.active .me
+main {
+    width: 100vw;
+    font-family: 'Now', sans-serif;
+    .plan-generator {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        .graphic {
+            &__image {
+                position: relative;
+                transform: translate(-50%, 0);
+                top: 150px;
+                left: 50%;
+                z-index: 0;
+                width: 200px;
+            }
+        }
+
+        &__btn {
+            margin: 190px auto 30px;
+            color: $white;
+            background-color: $gold;
+            padding: 9px 18px;
+            font-size: 14px;
+            width: 150px;
+            border-radius: 11px;
+            animation: clickMe 1.5s ease-in-out infinite;
+        }
+    }
+    .plan-info {
+        display: flex;
+        flex-direction: column;
+        &__image {
+            position: relative;
+            top: 5px;
+            width: 80px;
+            margin: 0 auto;
+        }
+        .plan-info-wrapper {
+            background-color: $light-gray;
+            width: 100%;
+            border-radius: 40px 0px;
+            padding: 20px 40px;
+        }
+        &__header {
+            font-size: 18px;
+            color: $gold;
+            font-weight: 500;
+            line-height: 25px;
+            margin-bottom: 12px;
+        }
+
+        &__text {
+            margin-bottom: 20px;
+        }
+        .content {
+            font-size: 13px;
+            line-height: 18px;
+            color: $dark-gray;
+        }
+    }
+
+    .about-us {
+
+        &__header {
+            margin: 80px 40px 20px;
+            font-size: 18px;
+            color: $dark-gray;
+            font-weight: 500;
+            text-align-last: left;
+        }
+        &__image {
+            width: 100%;
+            border-radius: 15px;
+            margin-bottom: 40px;
+        }
+        &__wrapper {
+            padding: 20px 40px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        &__text {
+            margin-bottom: 20px;
+        }
+
+        &__ps {
+            margin-bottom: 80px;
+        }
+
+        .content {
+            display: block;
+            color: $gold;
+            font-size: 13px;
+            line-height: 18px;
+            
+        }
+    }
+}
 
 .test-content {
-    width: 100%;
-    height: 300px;
-    margin-top: 100px;
+    display: none;
 }
+
+.footer {
+    height: 117px;
+    width: 100vw;
+    display: flex;
+    justify-content: space-around;
+    align-items: start;
+    align-self: flex-end;
+    gap: 20px;
+    background-color: $white;
+    box-shadow: 0px -4px 25.2px 0px rgba(0, 0, 0, 0.25);
+    padding: 22px 16px 0;
+
+    &__section {
+        font-family: 'Now', sans-serif;
+        color: $dark-gray;
+        .email {
+            font-size: 16px;
+            display: flex;
+            align-items: center;
+            gap: 7px;
+            &__text {
+                font-size: 11px;
+                font-weight: 400;
+            }
+        }
+
+        .social-media__links {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            align-items: center;
+            margin-top: 5px;
+        }
+
+        .social-media__link {
+            font-size: 22px;
+            color: $gold;
+        }
+    }
+
+    &__header {
+        font-size: 15px;
+        font-weight: 500;
+        margin-bottom: 10px;
+    }
+}
+
+
 
 
 
